// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkConnectionBanner snapshots should match snapshot for different network 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#9a63001a",
        "borderColor": "#9a63001a",
        "borderTopWidth": 1,
        "display": "flex",
        "paddingBottom": 12,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 12,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 8,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": "100%",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "gap": 8,
          },
          undefined,
        ]
      }
    >
      <View
        testID="animated-spinner"
      >
        <Text
          testID="spinner-size"
        >
          SM
        </Text>
      </View>
      <Text
        accessibilityRole="text"
        numberOfLines={1}
        style={
          [
            {
              "color": "#121314",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "fontFamily": "Geist Regular",
              "fontSize": 16,
              "fontWeight": 400,
              "letterSpacing": 0,
              "lineHeight": 24,
            },
            undefined,
          ]
        }
      >
        Still connecting to Polygon Mainnet...
      </Text>
    </View>
    <View
      style={
        [
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessibilityLabel="Update RPC"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "transparent",
              "borderRadius": 12,
              "borderWidth": 0,
              "flexDirection": "row",
              "flexShrink": 0,
              "height": 48,
              "justifyContent": "center",
              "minWidth": 80,
              "opacity": 1,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "auto",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "bottom": 0,
              "display": "flex",
              "justifyContent": "center",
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          testID="spinner-container"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "columnGap": 8,
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
            testID="spinner"
          >
            <View
              style={
                [
                  {
                    "transform": [
                      {
                        "rotate": "0deg",
                      },
                    ],
                  },
                ]
              }
              testID="spinner-animated-view"
            >
              <SvgMock
                fill="currentColor"
                name="Loading"
                style={
                  [
                    {
                      "color": "#4459ff",
                      "height": 20,
                      "width": 20,
                    },
                    undefined,
                  ]
                }
                testID="spinner-icon"
              />
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "columnGap": 8,
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="content-container"
        >
          <Text
            accessibilityRole="text"
            ellipsizeMode="clip"
            numberOfLines={1}
            style={
              [
                {
                  "color": "#4459ff",
                  "flexGrow": 0,
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                  "fontFamily": "Geist Medium",
                  "fontSize": 16,
                  "fontWeight": 400,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "textAlign": "center",
                },
                undefined,
              ]
            }
          >
            Update RPC
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`NetworkConnectionBanner snapshots should match snapshot for slow status banner 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#9a63001a",
        "borderColor": "#9a63001a",
        "borderTopWidth": 1,
        "display": "flex",
        "paddingBottom": 12,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 12,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 8,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": "100%",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "gap": 8,
          },
          undefined,
        ]
      }
    >
      <View
        testID="animated-spinner"
      >
        <Text
          testID="spinner-size"
        >
          SM
        </Text>
      </View>
      <Text
        accessibilityRole="text"
        numberOfLines={1}
        style={
          [
            {
              "color": "#121314",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "fontFamily": "Geist Regular",
              "fontSize": 16,
              "fontWeight": 400,
              "letterSpacing": 0,
              "lineHeight": 24,
            },
            undefined,
          ]
        }
      >
        Still connecting to Ethereum Mainnet...
      </Text>
    </View>
    <View
      style={
        [
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessibilityLabel="Update RPC"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "transparent",
              "borderRadius": 12,
              "borderWidth": 0,
              "flexDirection": "row",
              "flexShrink": 0,
              "height": 48,
              "justifyContent": "center",
              "minWidth": 80,
              "opacity": 1,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "auto",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "bottom": 0,
              "display": "flex",
              "justifyContent": "center",
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          testID="spinner-container"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "columnGap": 8,
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
            testID="spinner"
          >
            <View
              style={
                [
                  {
                    "transform": [
                      {
                        "rotate": "0deg",
                      },
                    ],
                  },
                ]
              }
              testID="spinner-animated-view"
            >
              <SvgMock
                fill="currentColor"
                name="Loading"
                style={
                  [
                    {
                      "color": "#4459ff",
                      "height": 20,
                      "width": 20,
                    },
                    undefined,
                  ]
                }
                testID="spinner-icon"
              />
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "columnGap": 8,
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="content-container"
        >
          <Text
            accessibilityRole="text"
            ellipsizeMode="clip"
            numberOfLines={1}
            style={
              [
                {
                  "color": "#4459ff",
                  "flexGrow": 0,
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                  "fontFamily": "Geist Medium",
                  "fontSize": 16,
                  "fontWeight": 400,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "textAlign": "center",
                },
                undefined,
              ]
            }
          >
            Update RPC
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`NetworkConnectionBanner snapshots should match snapshot for unavailable status banner 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#9a63001a",
        "borderColor": "#9a63001a",
        "borderTopWidth": 1,
        "display": "flex",
        "paddingBottom": 12,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 12,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 8,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": "100%",
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "gap": 8,
          },
          undefined,
        ]
      }
    >
      <View
        testID="animated-spinner"
      >
        <Text
          testID="spinner-size"
        >
          SM
        </Text>
      </View>
      <Text
        accessibilityRole="text"
        numberOfLines={1}
        style={
          [
            {
              "color": "#121314",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "fontFamily": "Geist Regular",
              "fontSize": 16,
              "fontWeight": 400,
              "letterSpacing": 0,
              "lineHeight": 24,
            },
            undefined,
          ]
        }
      >
        Network Ethereum Mainnet is not available
      </Text>
    </View>
    <View
      style={
        [
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessibilityLabel="Update RPC"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "transparent",
              "borderRadius": 12,
              "borderWidth": 0,
              "flexDirection": "row",
              "flexShrink": 0,
              "height": 48,
              "justifyContent": "center",
              "minWidth": 80,
              "opacity": 1,
              "overflow": "hidden",
              "paddingLeft": 16,
              "paddingRight": 16,
              "width": "auto",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "bottom": 0,
              "display": "flex",
              "justifyContent": "center",
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          testID="spinner-container"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "columnGap": 8,
                  "flexDirection": "row",
                },
                undefined,
              ]
            }
            testID="spinner"
          >
            <View
              style={
                [
                  {
                    "transform": [
                      {
                        "rotate": "0deg",
                      },
                    ],
                  },
                ]
              }
              testID="spinner-animated-view"
            >
              <SvgMock
                fill="currentColor"
                name="Loading"
                style={
                  [
                    {
                      "color": "#4459ff",
                      "height": 20,
                      "width": 20,
                    },
                    undefined,
                  ]
                }
                testID="spinner-icon"
              />
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "columnGap": 8,
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="content-container"
        >
          <Text
            accessibilityRole="text"
            ellipsizeMode="clip"
            numberOfLines={1}
            style={
              [
                {
                  "color": "#4459ff",
                  "flexGrow": 0,
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                  "fontFamily": "Geist Medium",
                  "fontSize": 16,
                  "fontWeight": 400,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "textAlign": "center",
                },
                undefined,
              ]
            }
          >
            Update RPC
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`NetworkConnectionBanner snapshots should match snapshot when banner is not visible 1`] = `null`;
